# brevphoenix

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  maven_install.json  package-lock.json  pnpm-lock.yaml
config/: localhost.toml
src/main/kotlin/com/brevphoenix/: Config.kt  GrpcShared.kt  Main.kt  PhoneNumber.kt
src/main/kotlin/com/brevphoenix/auth/: AccessManager.kt  AuthInterceptor.kt  RequiredScopes.kt
src/main/kotlin/com/brevphoenix/signin/: SigninHandler.kt
src/main/kotlin/com/brevphoenix/sms/: Sms.kt  SmsController.kt  SmsDatabaseHandler.kt  SmsEventService.kt  SmsMapper.kt  SmsReceiver.kt  SmsReceiverService.kt  SmsSendService.kt  SmsService.kt  SmsWsService.kt
src/main/kotlin/com/example/: Main.kt
src/main/resources/public/: manifest.json
src/main/resources/public/js/: fire.js  time.js
src/main/resources/sql/: init.sql
src/main/resources/vue/: conversation-empty-state.vue  conversation-item.vue  conversation.vue  layout.html  page-sign-in.vue  page-welcome.vue
src/test/kotlin/com/brevphoenix/: HelloTest.kt
src/test/kotlin/com/example/: HelloTest.kt
