bazel_dep(name = "rules_java", version = "7.11.1")
bazel_dep(name = "rules_kotlin", version = "1.9.6")
bazel_dep(name = "rules_jvm_external", version = "6.2")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.fasterxml.jackson.core:jackson-databind:2.15.2",
        "com.fasterxml.jackson.core:jackson-annotations:2.15.2",
        "com.fasterxml.jackson.module:jackson-module-kotlin:2.15.2",
        "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2",
        "io.javalin:javalin:5.6.1",
        "org.slf4j:slf4j-simple:2.0.9",
        "junit:junit:4.13.2",
        "org.assertj:assertj-core:3.20.2",
        "org.webjars.npm:axios:jar:1.5.0",
        "org.webjars.npm:vue:jar:3.3.4",
        "com.wgtwo.api.v1.grpc:sms:1.10.1",
        "com.wgtwo.api.v0.grpc:events:0.1.6",
        "com.wgtwo.api:auth:0.0.3",
        "com.googlecode.libphonenumber:libphonenumber:8.13.14",
        "com.google.protobuf:protobuf-java-util:3.18.1",
        "com.sksamuel.hoplite:hoplite-core:2.7.5",
        "com.sksamuel.hoplite:hoplite-toml:2.7.5",
    ],
    lock_file = "//:maven_install.json",  # to update: `REPIN=1 bazel run @maven//:pin`
)
use_repo(maven, "maven")

register_toolchains("//:kotlin_toolchain")
