bazel_dep(name = "rules_java", version = "7.11.1")
bazel_dep(name = "rules_kotlin", version = "1.9.6")
bazel_dep(name = "rules_jvm_external", version = "6.2")
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.fasterxml.jackson.core:jackson-databind:2.15.2",
        "com.fasterxml.jackson.core:jackson-annotations:2.15.2",
        "com.fasterxml.jackson.module:jackson-module-kotlin:2.15.2",
        "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2",
        "io.javalin:javalin:5.6.1",
        "org.slf4j:slf4j-simple:2.0.9",
        "junit:junit:4.13.2",
        "org.assertj:assertj-core:3.20.2",
        "org.webjars.npm:axios:jar:1.5.0",
        "org.webjars.npm:vue:jar:3.3.4",
        "com.wgtwo.api.v1.grpc:sms:1.10.1",
        "com.wgtwo.api.v0.grpc:events:0.1.6",
        "com.wgtwo.api:auth:0.0.3",
        "com.googlecode.libphonenumber:libphonenumber:8.13.14",
        "com.google.protobuf:protobuf-java-util:3.18.1",
        "com.sksamuel.hoplite:hoplite-core:2.7.5",
        "com.sksamuel.hoplite:hoplite-toml:2.7.5",
        "org.jdbi:jdbi3-core:jar:3.45.4",
        "org.postgresql:postgresql:42.7.2",
        "com.zaxxer:HikariCP:jar:5.1.0",
        "com.sksamuel.hoplite:hoplite-hikaricp:2.7.5",
    ],
    lock_file = "//:maven_install.json",  # to update: `REPIN=1 bazel run @maven//:pin`
)
use_repo(maven, "maven")

register_toolchains("//:kotlin_toolchain")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_java",
    digest = "sha256:161a1d97d592b3f1919801578c3a47c8e932071168a96267698f4b669c24c76d",
    image = "gcr.io/distroless/java17",
)
use_repo(oci, "distroless_java")
